test: update tests to use ReflectionTestUtils for ID injection and improve assertions