@@ -1,6 +1,7 @@
 package com.archiveat.server.domain.explore.repository;
 
 import com.archiveat.server.domain.explore.entity.Category;
+import com.archiveat.server.domain.explore.entity.Topic;
 import com.archiveat.server.global.config.JpaConfig;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -20,22 +21,26 @@ public class CategoryRepositoryTest {
 
     @Autowired
     private CategoryRepository categoryRepository;
+    @Autowired
+    private TopicRepository topicRepository;
 
     @Test
     @DisplayName("카테고리와 토픽 목록을 함께 조회한다")
-    public void testFindAllWithTopics() {
-        Category category = Category.builder()
-                .name("테스트 카테고리")
-                .build();
+    void findAllWithTopics_Success() {
+        // given
+        Category category = Category.builder().name("기술").build();
         categoryRepository.save(category);
 
+        Topic topic = Topic.builder().name("AI").category(category).build();
+        topicRepository.save(topic);
+
+        category.getTopics().add(topic);
+
+        // when
         List<Category> categories = categoryRepository.findAll();
 
+        // then
         assertThat(categories).isNotEmpty();
-        assertThat(categories.getFirst().getName()).isEqualTo("테스트 카테고리");
-
-        for (Category c : categories) {
-            assertThat(c.getTopics()).isNotNull();
-        }
+        assertThat(categories.get(0).getTopics()).hasSize(1);
     }
 }
