@@ -23,6 +23,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.util.List;
 import java.util.Optional;
@@ -70,8 +71,12 @@ class OnboardingServiceTest {
     @DisplayName("온보딩 메타데이터 조회 성공: 카테고리와 토픽 매핑 검증")
     void getOnboardingMetadata_Success() {
         // given
-        Topic topic = Topic.builder().id(10L).name("AI").build();
-        Category category = Category.builder().id(1L).name("IT").topics(List.of(topic)).build();
+        Topic topic = Topic.builder().name("AI").build();
+        ReflectionTestUtils.setField(topic, "id", 10L);
+
+        Category category = Category.builder().name("IT").topics(List.of(topic)).build();
+        ReflectionTestUtils.setField(category, "id", 1L);
+
         given(categoryRepository.findAll()).willReturn(List.of(category));
 
         // when
@@ -79,8 +84,7 @@ class OnboardingServiceTest {
 
         // then
         assertThat(response.categories()).hasSize(1);
-        assertThat(response.categories().getFirst().name()).isEqualTo("IT");
-        assertThat(response.categories().getFirst().topics().getFirst().name()).isEqualTo("AI");
+        assertThat(response.categories().get(0).name()).isEqualTo("IT");
     }
 
     @Nested
@@ -95,8 +99,11 @@ class OnboardingServiceTest {
             User user = new User("t@e.com", "p", "nick");
 
             // 시스템 전체 토픽 2개 준비
-            Topic selectedTopic = Topic.builder().id(10L).name("AI").build();
-            Topic unselectedTopic = Topic.builder().id(11L).name("Economy").build();
+            Topic selectedTopic = Topic.builder().name("AI").build();
+            ReflectionTestUtils.setField(selectedTopic, "id", 10L);
+
+            Topic unselectedTopic = Topic.builder().name("Economy").build();
+            ReflectionTestUtils.setField(unselectedTopic, "id", 11L);
 
             OnboardingInfoRequest request = new OnboardingInfoRequest(
                     EmploymentType.STUDENT,
@@ -111,37 +118,31 @@ class OnboardingServiceTest {
             onboardingService.submitOnboardingInfo(userId, request);
 
             // then
-            // 1. 기존 관심사 삭제 확인
-            verify(userTopicRepository).deleteAllByUserId(userId);
-
-            // 2. 유저 정보 업데이트 확인 (Reflection으로 필드 값 검증 가능)
-            assertThat(user.getEmploymentType()).isEqualTo(EmploymentType.STUDENT);
-
-            // 3. 전체 토픽 저장 로직 검증 (ArgumentCaptor 활용)
             @SuppressWarnings("unchecked")
             ArgumentCaptor<List<UserTopic>> captor = ArgumentCaptor.forClass(List.class);
             verify(userTopicRepository).saveAll(captor.capture());
-
             List<UserTopic> savedUserTopics = captor.getValue();
-            assertThat(savedUserTopics).hasSize(2);
 
-            // 10번 토픽은 NOW여야 함
-            UserTopic ut1 = savedUserTopics.stream().filter(ut -> ut.getTopic().getId().equals(10L)).findFirst().get();
-            assertThat(ut1.getPerspectiveType()).isEqualTo(PerspectiveType.NOW);
+            assertThat(savedUserTopics)
+                    .filteredOn(ut -> ut.getTopic().getId().equals(10L))
+                    .singleElement()
+                    .extracting(UserTopic::getPerspectiveType)
+                    .isEqualTo(PerspectiveType.NOW);
 
-            // 11번 토픽은 FUTURE여야 함
-            UserTopic ut2 = savedUserTopics.stream().filter(ut -> ut.getTopic().getId().equals(11L)).findFirst().get();
-            assertThat(ut2.getPerspectiveType()).isEqualTo(PerspectiveType.FUTURE);
+            assertThat(savedUserTopics)
+                    .filteredOn(ut -> ut.getTopic().getId().equals(11L))
+                    .singleElement()
+                    .extracting(UserTopic::getPerspectiveType)
+                    .isEqualTo(PerspectiveType.FUTURE);
         }
 
         @Test
         @DisplayName("실패: 존재하지 않는 유저 ID인 경우 USER_NOT_FOUND 예외 발생")
         void submitOnboardingInfo_Fail_UserNotFound() {
-            // given
+            OnboardingInfoRequest dummyRequest = new OnboardingInfoRequest(EmploymentType.STUDENT, null, List.of());
             given(userRepository.findById(anyLong())).willReturn(Optional.empty());
 
-            // when & then
-            assertThatThrownBy(() -> onboardingService.submitOnboardingInfo(1L, null))
+            assertThatThrownBy(() -> onboardingService.submitOnboardingInfo(1L, dummyRequest))
                     .isInstanceOf(CustomException.class)
                     .hasMessage(ErrorCode.USER_NOT_FOUND.getMessage());
         }
